--- a/sync-clavier.yaml
+++ b/sync-clavier.yaml
@@ -1,170 +1,109 @@
 blueprint:
-  name: Synchronisation Clavier - Alarme par Howmation
-  description: "Cette blueprint permet de relier un clavier Zigbee2MQTT à un panneau de contrôle d'alarme. Ainsi, l'état du panneau d'alarme est communiqué au clavier, et inversement, pour une synchronisation complète des deux dispositifs."
+  name: Sync Alarmo & Frient Keypad (No Code Arming)
+  description: Synchronisation bidirectionnelle entre Alarmo et le clavier Frient KEYZB-110 avec option d'armement sans code.
   domain: automation
   input:
-    mqtt_topic_etat_clavier:
-      name: Topic MQTT d'état du clavier Zigbee2MQTT
-      description: "Le topic MQTT où le clavier publie ses états. Exemple : zigbee2mqtt/Clavier"
-    mqtt_topic_commande_clavier:
-      name: Topic MQTT de commande du clavier Zigbee2MQTT
-      description: "Le topic MQTT pour envoyer des commandes au clavier. C'est généralement le topic d'état avec '/set' ajouté à la fin. Exemple : zigbee2mqtt/Clavier/set"
-    code_pins:
-      name: Codes PIN
-      description: "Liste des codes PIN valides pour contrôler le système d'alarme"
-      default:
-        - "1234"
-      selector:
-        text:
-          multiple: true
-    panneau_alarme:
-      name: Panneau de contrôle d'alarme
-      description: "Un panneau de contrôle d'alarme (Alarmo par exemple)"
+    alarm_panel:
+      name: Alarmo Entity
+      description: L'entité de l'alarme Alarmo.
       selector:
         entity:
           domain: alarm_control_panel
+    keypad_ieee:
+      name: Keypad IEEE Address / Topic
+      description: "Le topic MQTT du clavier (ex: zigbee2mqtt/Clavier_Entree)"
+    arm_without_code:
+      name: Autoriser l'armement sans code
+      description: Si activé, presser 'Away' ou 'Home' armera l'alarme immédiatement sans demander de code sur le clavier.
+      default: false
+      selector:
+        boolean: {}
 
 variables:
-  codes_pins_valides: !input "code_pins"
+  # On récupère l'input pour l'utiliser dans les templates
+  arm_without_code: !input arm_without_code
+  alarm_panel: !input alarm_panel
 
 trigger:
   - platform: state
-    entity_id: !input "panneau_alarme"
-    id: changement_etat_alarme
+    entity_id: !input alarm_panel
+    id: "alarm_state_change"
   - platform: mqtt
-    topic: !input "mqtt_topic_etat_clavier"
-    id: commande_clavier
+    topic: !input keypad_ieee
+    id: "keypad_action"
 
 action:
   - choose:
+      # --- SYNCHRO ALARMO VERS CLAVIER (LEDs) ---
       - conditions:
           - condition: trigger
-            id: changement_etat_alarme
+            id: "alarm_state_change"
         sequence:
           - service: mqtt.publish
             data:
-              topic: !input "mqtt_topic_commande_clavier"
+              topic: !input keypad_ieee
               payload: >
-                {% set etat = trigger.to_state.state %}
-                {% if etat == 'armed_away' %}
-                {
-                  "arm_mode": {
-                    "mode": "arm_all_zones"
-                  }
-                }
-                {% elif etat == 'armed_home' %}
-                {
-                  "arm_mode": {
-                    "mode": "arm_day_zones"
-                  }
-                }
-                {% elif etat == 'armed_night' %}
-                {
-                  "arm_mode": {
-                    "mode": "arm_night_zones"
-                  }
-                }
-                {% elif etat == 'disarmed' %}
-                {
-                  "arm_mode": {
-                    "mode": "disarm"
-                  }
-                }
-                {% elif etat == 'pending' %}
-                {
-                  "arm_mode": {
-                    "mode": "entry_delay"
-                  }
-                }
-                {% elif etat == 'arming' %}
-                  {% if trigger.to_state.attributes.next_state == 'armed_home' %}
-                  {
-                    "arm_mode": {
-                      "mode": "arm_day_zones"
-                    }
-                  }
-                  {% elif trigger.to_state.attributes.next_state == 'armed_away' %}
-                  {
-                    "arm_mode": {
-                      "mode": "exit_delay"
-                    }
-                  }
-                  {% endif %}
+                {% set state = trigger.to_state.state %}
+                {% if state == 'armed_away' %} {"arm_mode": {"mode": "arm_all_zones"}}
+                {% elif state == 'armed_home' %} {"arm_mode": {"mode": "arm_day_zones"}}
+                {% elif state == 'disarmed' %} {"arm_mode": {"mode": "disarm"}}
+                {% elif state == 'pending' %} {"arm_mode": {"mode": "entry_delay"}}
+                {% elif state == 'arming' %} {"arm_mode": {"mode": "exit_delay"}}
                 {% endif %}
+
+      # --- COMMANDE CLAVIER VERS ALARMO ---
       - conditions:
           - condition: trigger
-            id: commande_clavier
+            id: "keypad_action"
         sequence:
+          - variables:
+              action: "{{ trigger.payload_json.action }}"
+              code: "{{ trigger.payload_json.action_code | default('') }}"
+              transaction: "{{ trigger.payload_json.action_transaction }}"
+          
           - choose:
+              # CAS : ARMEMENT (Vérifie si on autorise sans code OU si un code est fourni)
               - conditions:
                   - condition: template
                     value_template: >
-                      {{ trigger.payload_json.action_transaction is defined and
-                         trigger.payload_json.action_code in codes_pins_valides }}
+                      {{ action in ['arm_all_zones', 'arm_day_zones', 'arm_night_zones'] and 
+                         (arm_without_code or code != '') }}
                 sequence:
                   - service: mqtt.publish
                     data:
-                      topic: !input "mqtt_topic_commande_clavier"
-                      payload: >
-                        {
-                          "arm_mode": {
-                            "transaction": "{{ trigger.payload_json.action_transaction }}",
-                            "mode": "{{ trigger.payload_json.action }}"
-                          }
-                        }
-                  - choose:
-                      - conditions:
-                          - condition: template
-                            value_template: "{{ trigger.payload_json.action == 'arm_all_zones' }}"
-                        sequence:
-                          - service: alarm_control_panel.alarm_arm_away
-                            target:
-                              entity_id: !input "panneau_alarme"
-                            data:
-                              code: "{{ trigger.payload_json.action_code }}"
-                      - conditions:
-                          - condition: template
-                            value_template: "{{ trigger.payload_json.action == 'arm_day_zones' }}"
-                        sequence:
-                          - service: alarm_control_panel.alarm_arm_home
-                            target:
-                              entity_id: !input "panneau_alarme"
-                            data:
-                              code: "{{ trigger.payload_json.action_code }}"
-                      - conditions:
-                          - condition: template
-                            value_template: "{{ trigger.payload_json.action == 'arm_night_zones' }}"
-                        sequence:
-                          - service: alarm_control_panel.alarm_arm_night
-                            target:
-                              entity_id: !input "panneau_alarme"
-                            data:
-                              code: "{{ trigger.payload_json.action_code }}"
-                      - conditions:
-                          - condition: template
-                            value_template: "{{ trigger.payload_json.action == 'disarm' }}"
-                        sequence:
-                          - service: alarm_control_panel.alarm_disarm
-                            target:
-                              entity_id: !input "panneau_alarme"
-                            data:
-                              code: "{{ trigger.payload_json.action_code }}"
-              - conditions:
-                  - condition: template
-                    value_template: >
-                      {{ trigger.payload_json.action_transaction is defined and
-                         trigger.payload_json.action_code not in codes_pins_valides }}
-                sequence:
-                  - service: mqtt.publish
+                      topic: !input keypad_ieee
+                      payload: "{\"arm_mode\": {\"transaction\": {{transaction}}, \"mode\": \"{{action}}\"}}"
+                  - service: >
+                      {% if action == 'arm_all_zones' %} alarm_control_panel.alarm_arm_away
+                      {% elif action == 'arm_day_zones' %} alarm_control_panel.alarm_arm_home
+                      {% else %} alarm_control_panel.alarm_arm_night
+                      {% endif %}
+                    target:
+                      entity_id: !input alarm_panel
                     data:
-                      topic: !input "mqtt_topic_commande_clavier"
-                      payload: >
-                        {
-                          "arm_mode": {
-                            "transaction": "{{ trigger.payload_json.action_transaction }}",
-                            "mode": "invalid_code"
-                          }
-                        }
+                      code: "{{ code }}"
 
-mode: parallel
-max: 10
+              # CAS : DÉSARMEMENT (Code obligatoire)
+              - conditions:
+                  - condition: template
+                    value_template: "{{ action == 'disarm' and code != '' }}"
+                sequence:
+                  - service: mqtt.publish
+                    data:
+                      topic: !input keypad_ieee
+                      payload: "{\"arm_mode\": {\"transaction\": {{transaction}}, \"mode\": \"disarm\"}}"
+                  - service: alarm_control_panel.alarm_disarm
+                    target:
+                      entity_id: !input alarm_panel
+                    data:
+                      code: "{{ code }}"
+
+              # CAS : ERREUR / CODE VIDE SUR DÉSARMEMENT
+              - conditions:
+                  - condition: template
+                    value_template: "{{ transaction is defined }}"
+                sequence:
+                  - service: mqtt.publish
+                    data:
+                      topic: !input keypad_ieee
+                      payload: "{\"arm_mode\": {\"transaction\": {{transaction}}, \"mode\": \"invalid_code\"}}"
